2014-01-13  Cong Hou  <congh@google.com>

	* opts.c (struct default_options default_options_table):
	Turn on -ftree-loop-vectorize at -O2.

Copyright (C) 2014 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.