@@ -1,3 +1,13 @@
+2014-02-03  Cong Hou  <congh@google.com>
+
+	Backport from mainline
+	2014-02-03  Cong Hou  <congh@google.com>
+
+	PR tree-optimization/60000
+	* tree-vect-loop.c (vect_transform_loop): Set pattern_def_seq to NULL
+	if the vectorized statement is a store.  A store statement can only
+	appear at the end of pattern statements.
+
 2014-01-13  Cong Hou  <congh@google.com>
 
 	* opts.c (struct default_options default_options_table):
